@@ -50,6 +50,7 @@ namespace MySql.Data.MySqlClient
         private PerformanceMonitor perfMonitor;
         private MySqlPromotableTransaction currentTransaction;
         private bool isExecutingBuggyQuery;
+        private string database;
 
         /// <include file='docs/MySqlConnection.xml' path='docs/InfoMessage/*'/>
         public event MySqlInfoMessageEventHandler InfoMessage;
@@ -173,7 +174,7 @@ namespace MySql.Data.MySqlClient
 #endif
         public override string Database
         {
-            get { return settings.Database; }
+            get { return database; }
         }
 
         /// <summary>
@@ -251,6 +252,10 @@ namespace MySql.Data.MySqlClient
                 }
 
                 settings = newSettings;
+
+                if (settings.Database != null && settings.Database.Length > 0)
+                    this.database = settings.Database;
+
                 if (driver != null)
                     driver.Settings = newSettings;
             }
@@ -343,7 +348,7 @@ namespace MySql.Data.MySqlClient
                 throw new InvalidOperationException(Resources.ConnectionNotOpen);
 
             driver.SetDatabase(database);
-            settings.Database = database;
+            this.database = database;
         }
 
         internal void SetState(ConnectionState newConnectionState)
